--- a/plugin/login/login.html
+++ b/plugin/login/login.html
@@ -13,45 +13,26 @@
 	</head>
 
 	<body>
-		
+
 		<div class="l_left">
 		</div>
 		<div class="l_right">
 			<div class="container" style="width: 78%;margin-top: 126px;position: relative;">
 				<div class="l_form-header">
 					<div style="float: left;"><h1>Login</h1></div>
-					<div style="float: right; margin-top: 20px;" class="btn-group">
-						<a href="#" class="btn btn-link"><i class="icon-user icon-white"></i> User</a>
-						<a class="btn btn-link dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="/admin/login"><i class="icon-user"></i> Admin</a></li>
-						</ul>
-					</div>
-					<!--<div class="">-->
-						<!--<button class="btn btn-primary" type="button">Admin</button>-->
-						<!--<button class="btn btn-info" type="button">User</button>-->
-						<!--</div>-->
 				</div>
 				<div class="l_form-body">
-					<!--<form class="form-horizontal" id="l_form" action="/login" method="post">-->
 					<div class="form-horizontal" id="l_form" >
 						<div class="control-group">
-							<label class="control-label" for="l_stu_no">Student No</label>
+							<label class="control-label" for="l_u_email">Admin Email</label>
 							<div class="controls">
-								<input type="text" id="l_u_email" placeholder="Student No" />
+								<input type="text" id="l_u_email" placeholder="Admin Email" />
 							</div>
 						</div>
 						<div class="control-group">
 							<label class="control-label" for="l_u_pwd">Password</label>
 							<div class="controls">
 								<input type="password" id="l_u_pwd" placeholder="Password" />
-							</div>
-						</div>
-						<div class="control-group">
-							<label class="control-label" for="l_u_verification">Verification</label>
-							<div class="controls" id="l_u_verification_html">
-								<a href="#" id="l_u_verification_click">Click Here And Gain Verfication Code</a>
-								<!--<input type="password" id="l_u_pwd" placeholder="Password" />-->
 							</div>
 						</div>
 						<div class="control-group">
@@ -66,14 +47,10 @@
 				<div class="alert" id="l_alert" style="display: none;margin-top: 4px;margin-left: 18px; box-shadow: 0 1px 1px;">
 					<button type="button" class="close" data-dismiss="alert">&times;</button>
 					<p id="l_err">error</p>
-				
 				</div>
 			</div>
 		</div>
 
 		<script language="Javascript" type="text/javascript" src="/js/login.js"></script>
-
-
 	</body>
-
 </html>
