--- a/3/plugin/eventsetter/add.html
+++ b/3/plugin/eventsetter/add.html
@@ -2,10 +2,10 @@
 <script language="Javascript" type="text/javascript" src="/bootstrap/js/bootstrap-wysihtml5.js"></script>
 <ol class="breadcrumb">
 	<li>
-	<a href="/wlg/setting/affair">事务公告</a> <span class="divider">/</span>
+	<a href="/wlg/setting/event">活动公告</a> <span class="divider">/</span>
 	</li>
 	<li class="active">
-	添加事务
+	添加活动
 	</li>
 </ol>
 <div class="container" style="width: 720px;">
@@ -33,7 +33,7 @@
 				<div class="control-group">
 					<div class="controls">
 						<button class="btn btn-success a_e_save">Save</button>
-						<a href="/wlg/setting/affair/page" class="btn btn-link">Cancel</a>
+						<a href="/wlg/setting/event/page" class="btn btn-link">Cancel</a>
 					</div>
 				</div>
 
@@ -46,4 +46,4 @@
 	</div>
 </div>
 <script language="Javascript" type="text/javascript" src="/js/base_setter.js"></script>
-<script language="Javascript" type="text/javascript" src="/js/affair_setter.js"></script>
+<script language="Javascript" type="text/javascript" src="/js/event_setter.js"></script>
