--- a/3/plugin/summarysetter/add.html
+++ b/3/plugin/summarysetter/add.html
@@ -2,10 +2,10 @@
 <script language="Javascript" type="text/javascript" src="/bootstrap/js/bootstrap-wysihtml5.js"></script>
 <ol class="breadcrumb">
 	<li>
-	<a href="/wlg/setting/affair">事务公告</a> <span class="divider">/</span>
+	<a href="/wlg/setting/summary">活动回顾</a> <span class="divider">/</span>
 	</li>
 	<li class="active">
-	添加事务
+	添加
 	</li>
 </ol>
 <div class="container" style="width: 720px;">
@@ -15,13 +15,13 @@
 				<div class="control-group">
 					<label class="control-label" for="e_s_title">Title</label>
 					<div class="controls">
-						<input type="text" id="e_s_title" placeholder="Affair Title" />
+						<input type="text" id="e_s_title" placeholder="Summary Title" />
 					</div>
 				</div>
 				<div class="control-group">
 					<label class="control-label" for="e_s_writer">Writer</label>
 					<div class="controls">
-						<input type="text" id="e_s_writer" placeholder="Affair Edit Writer" />
+						<input type="text" id="e_s_writer" placeholder="Summary Edit Writer" />
 					</div>
 				</div>
 				<div class="control-group">
@@ -33,7 +33,7 @@
 				<div class="control-group">
 					<div class="controls">
 						<button class="btn btn-success a_e_save">Save</button>
-						<a href="/wlg/setting/affair/page" class="btn btn-link">Cancel</a>
+						<a href="/wlg/setting/summary/page" class="btn btn-link">Cancel</a>
 					</div>
 				</div>
 
@@ -46,4 +46,4 @@
 	</div>
 </div>
 <script language="Javascript" type="text/javascript" src="/js/base_setter.js"></script>
-<script language="Javascript" type="text/javascript" src="/js/affair_setter.js"></script>
+<script language="Javascript" type="text/javascript" src="/js/summary_setter.js"></script>
