--- a/3/plugin/login/login.html
+++ b/3/plugin/login/login.html
@@ -7,7 +7,7 @@
 		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
 		<link href="/css/login.css" rel="stylesheet" />
-		<script language="Javascript" type="text/javascript" src="/js/jQuery2.0.2.min.js"></script>
+		<script language="Javascript" type="text/javascript" src="/js/jquery.min.js"></script>
 		<script language="Javascript" type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
 		<script language="Javascript" type="text/javascript" src="/js/md5.js"></script>
 	</head>
