--- a/plugin/introduction/introduction.html
+++ b/plugin/introduction/introduction.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Wuhan Linux user group 事务列表</title>
+<title>Wuhan Linux user group 关于我们</title>
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="/css/main.css">
 </head>
@@ -20,7 +20,7 @@
 
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
-      <a class="titlelist_a_hover" style="color: #8063f3;" href="javascript:none;">
+      <a href="/affair">
         事务
         <p class="n2">Affairs</p>
       </a>
@@ -44,7 +44,7 @@
 
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
-      <a href="/introduction">
+      <a class="titlelist_a_hover" style="color: #8063f3;" href="javascript:none;">
         WhLug介绍
         <p class="n2">About  WhLug</p>
       </a>
@@ -71,52 +71,13 @@
 
 <div class="container-fluid">
   <div class="activity_name">
-    <div class="big">● 事务公告 ●</div>
+    <div class="big">● 关于WhLug ●</div>
   </div>
   <div class="row-fluid activity_contain">
-    <div class="span8 offset2  activity_border">
-      <%if !content.nil? and !content.empty?%>
-        <%content.map do |list|%>
-          <%if list.nil?%><%next%><%end%>
-          <div class="row-fluid activity_total">
-            <div class="span5 activity_title">
-              <%=list.title%>
-            </div>
-            <div class="span7 activity_text">
-              <div class="activity_date"><%=list.time%></div>
-              <div class="activity_t"><%=list.content%></div>
-              <div class="activity_more row-fluid">
-                <div class="span3">阅读(<%=list.hits%>)</div>
-                <div class="span3 offset3 activity_check" style="float: right;"><a href="/affair/list/<%=list.nid%>">查看全文</a></div>
+    <div class="span6 offset3  activity_border">
+      <div class="activity_2_total aboutus">
 
-              </div>
-            </div>
-          </div>
-        <%end%>
-      <%else%>
-        <div class="row-fluid activity_total">
-          <div class="span5 activity_title">
-            没有事务公告
-          </div>
-        </div>
-      <%end%>
-
-      <%if !left_page.nil? or !right_page.nil?%>
-        <div class="row-fluid">
-          <div class="span8 offset2">
-            <div class="page">
-              <ul>
-                <%if !left_page.nil?%>
-                  <li><a href="/affair/page/<%=left_page%>" title="上一页">&lt;</a></li>
-                <%end%>
-                <%if !right_page.nil?%>
-                  <li><a href="/affair/page/<%=right_page%>" title="下一页">&gt;</a></li>
-                <%end%>
-              </ul>
-            </div>
-          </div>
-        </div>
-      <%end%>
+      </div>
     </div>
   </div>
 </div>
