--- a/plugin/contact/contactus.html
+++ b/plugin/contact/contactus.html
@@ -71,7 +71,7 @@
 
 <div class="container-fluid">
   <div class="activity_name">
-    <div class="big">● 联系我们 ●</div>
+    <div class="big"><img src="/image/dot.png"> 联系我们 <img src="/image/dot.png"></div>
   </div>
   <div class="row-fluid activity_contain">
     <div class="span6 offset3">
