--- a/plugin/introduction/introduction.html
+++ b/plugin/introduction/introduction.html
@@ -71,7 +71,7 @@
 
 <div class="container-fluid">
   <div class="activity_name">
-    <div class="big">● 关于WhLug ●</div>
+    <div class="big"><img src="/image/dot.png"> 关于WhLug <img src="/image/dot.png"></div>
   </div>
   <div class="row-fluid activity_contain">
     <div class="span6 offset3  activity_border">
