--- a/assets/tt/web/aboutus.html
+++ b/assets/tt/web/aboutus.html
@@ -62,24 +62,25 @@
 			</div>	
 		</div>
 		<div class="container-fluid smallheadername">
-			<div class="row-fluid">
-				<div class="span6 offset3">
+			<div class="realPlace-smallName">
 					<div class="smallname"></div>
-				</div>
 			</div>
 		</div>
-
-		<div class="container-fluid">
 			<div class="activity_name">
-				<div class="big">● 关于WhLug ●</div>
-			</div>
-			<div class="row-fluid activity_contain">
-				<div class="span6 offset3  activity_border">
-					<div class="activity_2_total aboutus">
-						
+				<div class="title-small">
+					<div class="second-title">
+						<p class="title-doc"></p>
+						<span class="title-big">关于WhLUG</span>
+						<p class="title-doc"></p>
 					</div>
 				</div>
 			</div>
+		<div class="realContent">
+			
+				<div class="activity_border ">
+					<div class="activity_2_total aboutus">
+					</div>
+				</div>
 		</div>
 		<div class="container-fluid footer">
 			<div class="row-fluid">
