--- a/assets/tt/web/activities_detail.html
+++ b/assets/tt/web/activities_detail.html
@@ -62,38 +62,44 @@
 			</div>	
 		</div>
 		<div class="container-fluid smallheadername">
-			<div class="row-fluid">
-				<div class="span6 offset3">
+			<div class="realPlace-smallName">
 					<div class="smallname"></div>
-				</div>
 			</div>
 		</div>
 
 		<div class="container-fluid">
 			<div class="activity_name">
-				<div class="small">● 活动公告 <span class="big">● 正文 ●</span></div>
+				<div class="title-small">
+					<div class="first-title">
+						<p class="title-doc"></p>
+						<span>活动公告</span>
+						<p class="title-doc"></p>
+					</div>
+					<div class="second-title">
+						<span class="title-big">正文</span>
+						<p class="title-doc"></p>
+					</div>
+				</div>
 			</div>
-			<div class="row-fluid activity_contain">
-				<div class="span6 offset3  activity_border">
+			<div class="realContent">
+				<div class="activity_border">
 					<div class="activity_2_total">
 						<div class="activity_2_title">
 							<div class="activity_2_titlename">坑队友系列——（一）</div>
-							<div class="activity_2_time row-fluid">
-								<div class="span6 offset2">发布时间：2013-08-19  20:23</div>
-								<div class="span4">编辑：刘长通</div>
+							<div class="activity_2_time">
+								<div class="content-subTitle-left">发布时间：2013-08-19  20:23</div>
+								<div class="content-subTitle-left">编辑：刘长通</div>
 							</div>
 						</div>
 						<div class="activity_2_text">
-							<div class="act_2_time">时间：6月4日</div>
-							<div class="act_2_place">地点：天安门广场</div>
-							<div class="act_2_text">
-								<p>今天我和小伙伴们一起来到了天安门广场，然后陆少说「你们都别拦我，我要把这全炸了」。</p>
-								<p>陆少(1992-2013)</p>
+							<div>
+								的撒打算大师的撒旦达到了萨克大大大是考虑到喀什啊实打实奥斯卡的拉斯科阿是看得见撒看见大家是空间大师快捷时间段卡坚实的煎熬了宿建德江啦的骄傲是看得见拉丝机的空间阿卡时间段阿娇是看得见按实际的空间撒看得见啊数据库的金卡是经典款撒娇看得见萨克了解的萨克可是骄傲的空间阿斯兰的骄傲看时间到课率
 							</div>
 						</div>
 						<div class="activity_2_more row-fluid">
-							<div class="span3">阅读次数(2880)</div>
-							<div class="span3">分享(3)</div>
+							<div>
+								<span class="readCount">阅读次数(2880)</span>
+							</div>
 						</div>
 					</div>
 				</div>
