--- a/assets/tt/web/index.html
+++ b/assets/tt/web/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="container-fluid headerlist">
-			<div class="navbar navbar-static-top">				
+			<div class="navbar navbar-static-top">
 					<ul  id="titlelist">
 						 <li class="divider-vertical n3"></li>
 						 <li class="n1 text-center">
@@ -20,7 +20,7 @@
 
 						<li class="divider-vertical n3"></li>
 						<li class="n1 text-center">
-						 	<a href="#">
+						 	<a href="/affair">
 							 	事务
 							 	<p class="n2">Affairs</p>
 							 </a>
@@ -28,7 +28,7 @@
 
 						<li class="divider-vertical n3"></li>
 						<li class="n1 text-center">
-						 	<a href="#">
+						 	<a href="/event">
 							 	活动
 							 	<p class="n2">Activities</p>
 							 </a>
@@ -36,7 +36,7 @@
 
 						<li class="divider-vertical n3"></li>
 						<li class="n1 text-center">
-						 	<a href="#">
+						 	<a href="/review">
 							 	回顾
 							 	<p class="n2">Review</p>
 							 </a>
@@ -44,7 +44,7 @@
 
 						<li class="divider-vertical n3"></li>
 						<li class="n1 text-center">
-						 	<a href="#">
+						 	<a href="aboutus.html">
 							 	WhLug介绍
 							 	<p class="n2">About  WhLug</p>
 							 </a>
@@ -52,7 +52,7 @@
 
 						<li class="divider-vertical n3"></li>
 						<li class="n1 text-center">
-						 	<a href="#">
+						 	<a href="contactUs.html">
 							 	联系我们
 							 	<p class="n2">Contact  us</p>
 							 </a>
@@ -62,16 +62,13 @@
 			</div>	
 		</div>
 		<div class="container-fluid headername">
-			<div class="row-fluid">
-				<div class="span10 offset1">
-					<div class="name"></div>
-				</div>
+			<div class="realPlace-name">
+						<div class="name"></div>
 			</div>
 		</div>
 
 		<div class="container-fluid Lcontain">
-			<div class="row-fluid">
-				<div class="span10 offset1">
+			<div class="realPlace">
 					<div class="row-fluid">
 						<div class="span4">
 							<div class="row-fluid title">
@@ -181,7 +178,6 @@
 								</tr>
 							</table>
 							</div>
-						</div>
 					</div>
 				</div>
 			</div>
