--- a/assets/tt/web/activities_list.html
+++ b/assets/tt/web/activities_list.html
@@ -12,7 +12,7 @@
 					<ul  id="titlelist">
 						 <li class="divider-vertical n3"></li>
 						 <li class="n1 text-center">
-						 	<a href="#">
+						 	<a href="index.html">
 							 	首页
 							 	<p class="n2">Home</p>
 							 </a>
@@ -45,7 +45,7 @@
 						<li class="divider-vertical n3"></li>
 						<li class="n1 text-center">
 						 	<a href="#">
-							 	WhLug介绍
+							 	WhLUG介绍
 							 	<p class="n2">About  WhLug</p>
 							 </a>
 						 </li>
@@ -62,19 +62,23 @@
 			</div>	
 		</div>
 		<div class="container-fluid smallheadername">
-			<div class="row-fluid">
-				<div class="span6 offset3">
+			<div class="realPlace-smallName">
 					<div class="smallname"></div>
-				</div>
 			</div>
 		</div>
 
 		<div class="container-fluid">
 			<div class="activity_name">
-				<div class="big">● 活动公告 ●</div>
+				<div class="title-small">
+					<div class="second-title">
+						<p class="title-doc"></p>
+						<span class="title-big">正文</span>
+						<p class="title-doc"></p>
+					</div>
+				</div>
 			</div>
-			<div class="row-fluid activity_contain">
-				<div class="span8 offset2  activity_border">
+			<div class="realContent-activity">
+				<div class=" activity_border">
 					<div class="row-fluid activity_total">
 						<div class="span5 activity_title">
 							活动标题活动标题
@@ -85,11 +89,12 @@
 							正文内容正文内容正文内容正文内容正文内容正文内容正文内容正文内容
 							正文内容正文内容正文内容正文内容正文内容正文内容正文内容正文内容
 							正文内容正文内容正文内容正文内容正文内容正文内容正文内容正文内容</div>
+							<span class="more-doc">
+								......
+							</span>
 							<div class="activity_more row-fluid">
 								<div class="span3">阅读(3)</div>
-								<div class="span3">分享(3)</div>
-								<div class="span3 offset3 activity_check">查看全文</div>
-
+								<a class="activity_check" href="#">查看全文</a>
 							</div>
 						</div>
 					</div>
@@ -102,11 +107,12 @@
 							<div class="activity_date">2013-08-21</div>
 							<div class="activity_t">正文内容正文内容正文内容正文内容正文内容
 							正文内容正文内容正文内容正文内容正文内容正文内容正文内容正文内容</div>
+							<span class="more-doc">
+								......
+							</span>
 							<div class="activity_more row-fluid">
 								<div class="span3">阅读(3)</div>
-								<div class="span3">分享(3)</div>
-								<div class="span3 offset3 activity_check">查看全文</div>
-
+								<a class="activity_check" href="#">查看全文</a>
 							</div>
 						</div>
 					</div>
@@ -118,12 +124,14 @@
 						<div class="span7 activity_text">
 							<div class="activity_date">2013-08-21</div>
 							<div class="activity_t">正文内容正文内容正文内容正文内容正文内容
-							正文内容正文内容正文内容正文内容正文内容正文内容正文内容正文内容</div>
+							正文内容正文内容正文内容正文内容正文内容正文内容正文内容正文内容
+							</div>
+							<span class="more-doc">
+								......
+							</span>
 							<div class="activity_more row-fluid">
 								<div class="span3">阅读(3)</div>
-								<div class="span3">分享(3)</div>
-								<div class="span3 offset3 activity_check">查看全文</div>
-
+								<a class="activity_check" href="#">查看全文</a>
 							</div>
 						</div>
 					</div>
