--- a/assets/tt/web/contactus.html
+++ b/assets/tt/web/contactus.html
@@ -62,16 +62,20 @@
 			</div>	
 		</div>
 		<div class="container-fluid smallheadername">
-			<div class="row-fluid">
-				<div class="span6 offset3">
+			<div class="realPlace-smallName">
 					<div class="smallname"></div>
-				</div>
 			</div>
 		</div>
 
 		<div class="container-fluid">
 			<div class="activity_name">
-				<div class="big">● 联系我们 ●</div>
+				<div class="title-small">
+					<div class="second-title">
+						<p class="title-doc"></p>
+						<span class="title-big">联系我们</span>
+						<p class="title-doc"></p>
+					</div>
+				</div>
 			</div>
 			<div class="row-fluid activity_contain">
 				<div class="span6 offset3">
