--- a/plugin/contact/contactus.html
+++ b/plugin/contact/contactus.html
@@ -52,7 +52,7 @@
 
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
-      <a class="titlelist_a_hover" style="color: #8063f3;" href="javascript:none;">
+      <a class="titlelist_a_hover" style="color: #8063f3;border: 4px #8063f3;border-bottom-style: solid;padding-bottom: 6px;" href="javascript:none;">
         联系我们
         <p class="n2">Contact  us</p>
       </a>
