--- a/plugin/contact/contactus.html
+++ b/plugin/contact/contactus.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Wuhan Linux user group 联系我们</title>
+<title>Wuhan Linux user group </title>
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 <div class="container-fluid headerlist">
@@ -45,8 +45,8 @@
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
       <a href="/introduction">
-        WhLug介绍
-        <p class="n2">About  WhLug</p>
+        WhLUG介绍
+        <p class="n2">About  WhLUG</p>
       </a>
       </li>
 
@@ -61,17 +61,22 @@
     </ul>
   </div>
 </div>
+
 <div class="container-fluid smallheadername">
-  <div class="row-fluid">
-    <div class="span6 offset3">
-      <div class="smallname"></div>
-    </div>
+  <div class="realPlace-smallName">
+    <div class="smallname"></div>
   </div>
 </div>
 
 <div class="container-fluid">
   <div class="activity_name">
-    <div class="big"><img src="/image/dot.png"> 联系我们 <img src="/image/dot.png"></div>
+    <div class="title-small">
+      <div class="second-title">
+        <p class="title-doc"></p>
+        <span class="title-big">联系我们</span>
+        <p class="title-doc"></p>
+      </div>
+    </div>
   </div>
   <div class="row-fluid activity_contain">
     <div class="span6 offset3">
