--- a/plugin/introduction/introduction.html
+++ b/plugin/introduction/introduction.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Wuhan Linux user group 关于我们</title>
-<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
@@ -45,8 +45,8 @@
       <li class="divider-vertical n3"></li>
       <li class="n1 text-center">
       <a class="titlelist_a_hover" style="color: #8063f3;border: 4px #8063f3;border-bottom-style: solid;padding-bottom: 6px;" href="javascript:none;">
-        WhLug介绍
-        <p class="n2">About  WhLug</p>
+        WhLUG介绍
+        <p class="n2">About  WhLUG</p>
       </a>
       </li>
 
@@ -62,22 +62,23 @@
   </div>
 </div>
 <div class="container-fluid smallheadername">
-  <div class="row-fluid">
-    <div class="span6 offset3">
-      <div class="smallname"></div>
+  <div class="realPlace-smallName">
+    <div class="smallname"></div>
+  </div>
+</div>
+<div class="activity_name">
+  <div class="title-small">
+    <div class="second-title">
+      <p class="title-doc"></p>
+      <span class="title-big">关于WhLUG</span>
+      <p class="title-doc"></p>
     </div>
   </div>
 </div>
+<div class="realContent">
 
-<div class="container-fluid">
-  <div class="activity_name">
-    <div class="big"><img src="/image/dot.png"> 关于WhLug <img src="/image/dot.png"></div>
-  </div>
-  <div class="row-fluid activity_contain">
-    <div class="span6 offset3  activity_border">
-      <div class="activity_2_total aboutus">
-
-      </div>
+  <div class="activity_border ">
+    <div class="activity_2_total aboutus">
     </div>
   </div>
 </div>
