--- a/plugin/login/login.html
+++ b/plugin/login/login.html
@@ -4,11 +4,9 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-		<link href="/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" />
+		<link href="/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="/css/login.css" rel="stylesheet" />
 		<script language="Javascript" type="text/javascript" src="/js/jquery.min.js"></script>
-		<script language="Javascript" type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
 		<script language="Javascript" type="text/javascript" src="/js/md5.js"></script>
 	</head>
 
